<resources>
    <string name="app_name">ActivityStream</string>

    <string name="action_settings">Settings</string>
    <string name="login_page">JIRA 로그인</string>

    <string name="test_jira_url">http://192.168.0.6:8080</string>
    <string name="test_username">leeheeju@gmail.com</string>
    <string name="test_password">abcde12!@</string>
    <string name="prompt_jira_url">JIRA Site URL</string>
    <string name="prompt_username">아이디</string>
    <string name="prompt_password">비밀번호</string>
    <string name="field_required">입력하세요.</string>
    <string name="action_login">로그인</string>
    <string name="title_activity_stream">StreamActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_test">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_issue">IssueActivity</string>
    invalid_password

</resources>
