<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:gravity="center_horizontal"
    android:orientation="vertical" android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" tools:context=".LoginActivity">

    <ProgressBar android:id="@+id/login_progress" style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_marginBottom="8dp" android:visibility="gone" />

    <ScrollView android:id="@+id/login_form" android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content" android:orientation="vertical">

            <EditText android:id="@+id/jira_url" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:hint="@string/prompt_jira_url"
                android:inputType="textUri" android:maxLines="1" android:text="@string/test_jira_url"
                android:singleLine="true" />

            <EditText android:id="@+id/username" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:hint="@string/prompt_username"
                android:inputType="text" android:maxLines="1" android:text="@string/test_username"
                android:singleLine="true" />

            <EditText android:id="@+id/password" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:hint="@string/prompt_password"
                android:inputType="textPassword" android:maxLines="1" android:text="@string/test_password"
                android:singleLine="true" />

            <Button android:id="@+id/login_button" style="?android:textAppearanceMedium"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:layout_marginTop="16dp" android:text="@string/action_login"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>
